[package]
authors = ["WildCommunist <alex@ceres.ventures>"]
name = "tower_power"
version = "0.1.0"
edition = "2021"

# Some optimization for development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] } # remove dynamic prior to publishing game
bevy-inspector-egui = "0.15.0"
bevy_rapier3d = { version = "0.19", features = ["simd-stable", "debug-render"] }